--- a/SeleniumFramework/test-output/old/Default suite/methods-alphabetical.html
+++ b/SeleniumFramework/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="999395">  <td>20/05/27 15:49:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AutoITDemo.test()[pri:0, instance:Demo.AutoITDemo@48503868]">test</td> 
-  <td>main@1154002927</td>   <td></td> </tr>
+<tr bgcolor="6694f1">  <td>20/05/30 15:04:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Test1.setUp()[pri:0, instance:Demo.Test1@26a7b76d]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1543974463</td>   <td></td> </tr>
+<tr bgcolor="6694f1">  <td>20/05/30 15:04:07</td>   <td>2938</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Test1.tearDown()[pri:0, instance:Demo.Test1@26a7b76d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1543974463</td>   <td></td> </tr>
+<tr bgcolor="6694f1">  <td>20/05/30 15:04:07</td>   <td>2924</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.test1()[pri:0, instance:Demo.Test1@26a7b76d]">test1</td> 
+  <td>main@1543974463</td>   <td></td> </tr>
 </table>
